--- a/Back/Dockerfile
+++ b/Back/Dockerfile
@@ -1,12 +1,7 @@
-FROM python:3.8-slim
-WORKDIR /app
-COPY /src /app/
-COPY /requirements.txt /app/
-RUN apt-get update \
-    && apt-get install -y postgresql postgresql-contrib libpq-dev \
-    && apt-get install -y build-essential \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
-RUN pip install -r requirements.txt
+FROM python:3.11
+WORKDIR /code
+COPY ./src/ /code/
+COPY ./requirements.txt /code/
+RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 EXPOSE 8000
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host","0.0.0.0","--port","8000","--reload"]
