--- a/Back/k8s/app.yml
+++ b/Back/k8s/app.yml
@@ -17,6 +17,7 @@ spec:
       containers:
         - name: "trackseries"
           image: raphaelmdx/projeto:back
+          imagePullPolicy: Always
           ports:
             - containerPort: 8000
           env:
